Auto stash before merge of "master" and "origin/master"

--- a/.env
+++ b/.env
@@ -47,3 +47,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 TMDB_BASE_URL=http://api.themoviedb.org
 TMDB_IMAGE_BASE_URL=http://image.tmdb.org/t/p
 TMDB_KEY=07781e9d3ce562b41e44f16649ef204f
+
+PAYPAL_CLIENT_ID=sb-m7dq471303497@business.example.com
+PAYPAL_SECRET=access_token$sandbox$jvnybpxsf5ywzb8g$642e1b72153bcde3740c0188e31a6362
+PAYPAL_MODE=sandbox
