paypal in progress

--- a/.env
+++ b/.env
@@ -48,6 +48,17 @@ TMDB_BASE_URL=http://api.themoviedb.org
 TMDB_IMAGE_BASE_URL=http://image.tmdb.org/t/p
 TMDB_KEY=07781e9d3ce562b41e44f16649ef204f
 
-PAYPAL_CLIENT_ID=sb-m7dq471303497@business.example.com
-PAYPAL_SECRET=access_token$sandbox$jvnybpxsf5ywzb8g$642e1b72153bcde3740c0188e31a6362
+
 PAYPAL_MODE=sandbox
+
+#PayPal Setting & API Credentials - sandbox
+PAYPAL_SANDBOX_API_USERNAME=sb-m7dq471303497@business.example.com
+PAYPAL_SANDBOX_API_PASSWORD=Ab0TDJSIji5YXGd6-LkjRaegUZMst6gn1ek3KL0WWfNQ5fQWu-G1LP57T62dGlSS6SO6ccbeR9kqGIQr
+PAYPAL_SANDBOX_API_SECRET=EHCHJjrbofmxjLw_GgQNbyzXkFAUjBzgQ0RiOKW6scpAIo9Kq8RUZ3qRRohUk5C6jrTxh5cFCxd-zZuO
+PAYPAL_SANDBOX_API_CERTIFICATE=
+
+#PayPal Setting & API Credentials - live
+PAYPAL_LIVE_API_USERNAME=
+PAYPAL_LIVE_API_PASSWORD=
+PAYPAL_LIVE_API_SECRET=
+PAYPAL_LIVE_API_CERTIFICATE=
